[gd_scene load_steps=8 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/giris_buton_normal.webp" type="Texture" id=2]
[ext_resource path="res://resimler/giris_buton_basili.webp" type="Texture" id=3]
[ext_resource path="res://sceneler/tali_sahneler/galaksi_tiklayinca.gd" type="Script" id=4]
[ext_resource path="res://resimler/popup_arkaplan_genel.webp" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0.945098, 0.521569, 0.027451, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Main" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -107.0
margin_right = 150.0
margin_bottom = 130.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 11.0
margin_right = 138.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 72.0
margin_right = -20.0
margin_bottom = -16.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiveIn" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_right = 260.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/DiveIn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Dive In"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsePossession" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 76.0
margin_right = 260.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/UsePossession"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Use Possesion"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="popup_hide" from="." to="." method="_on_Main_popup_hide"]
[connection signal="pressed" from="TextureRect/VBoxContainer/DiveIn" to="." method="_on_DiveIn_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/UsePossession" to="." method="_on_UsePossession_pressed"]
